schermata 100 vh e contenitore centrato

--- a/index.html
+++ b/index.html
@@ -6,8 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoom</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;700&family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://kit.fontawesome.com/16e1525a45.css" crossorigin="anonymous">
 </head>
 <body>
-    
+    <!-- SCHERMATA 100 VH -->
+    <div class="schermata">
+
+        <!-- MAIN -->
+        <MAIN>
+            <!-- SEZIONE BOTTONI SUPERIORI -->
+            <div class="sezione-bottoni-visuale">
+                <button class="bottone"><i class="fa-solid fa-grip"> </i> Speaker View</button>
+                <button class="bottone"><i class="fa-solid fa-maximize"></i></button>
+            </div>
+            <!-- FINE SEZIONE BOTTONI SUPERIORI -->
+            <div class="contenitore">
+                <div class="colonna">
+                    <div class="carta">
+                        
+                    </div>
+                </div>
+            </div>
+
+        </MAIN>
+        <!-- FINE MAIN -->
+
+        <!-- NAV -->
+        <NAV>
+
+        </NAV>
+        <!-- FINE NAV -->
+
+    </div>
+    <!-- FINE SCHERMATA 100 VH -->
 </body>
 </html>
