--- a/index.html
+++ b/index.html
@@ -26,9 +26,126 @@
             <!-- FINE SEZIONE BOTTONI SUPERIORI -->
             <div class="contenitore">
                 <div class="colonna">
+                    <!-- 1ªriga -->
                     <div class="carta">
-                        
+                        Pinco Pallo
                     </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <!-- fine 1ª riga -->
+
+                    <!-- 2ªriga -->
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <!-- fine 2ª riga -->
+
+                    <!-- 3ªriga -->
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <!-- fine 3ª riga -->
+
+                    <!-- 4ªriga -->
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <!-- fine 4ª riga -->
+
+                    <!-- 5ªriga -->
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <div class="carta">
+                        Pinco Pallo
+                    </div>
+                    <!-- fine 5ª riga -->
+
                 </div>
             </div>
 
