--- a/index.html
+++ b/index.html
@@ -368,7 +368,93 @@
 
         <!-- NAV -->
         <NAV>
+            <!-- BOTTONI -->
+            <div class="sezione-bottoni-nav sezione-bottoni-laterale">
 
+                <!-- BOTTONE -->
+                <button class="bottone-nav">
+                    <i class="fa-solid fa-microphone icona-grande"></i>
+                    <div class="testo-bottone">Mute</div>
+                    <span class="freccia"><i class="fa-solid fa-angle-up"></i></span>
+                </button>
+                <!-- FINE BOTTONE -->
+
+                <!-- BOTTONE -->
+                <button class="bottone-nav">
+                    <i class="fa-solid fa-video icona-grande"></i>
+                    <div class="testo-bottone">Stop Video</div>
+                    <span class="freccia"><i class="fa-solid fa-angle-up"></i></span>
+                </button>
+                <!-- FINE BOTTONE -->
+            </div>
+
+            <div class="sezione-bottoni-nav sezione-bottoni-centrale">
+
+                <!-- BOTTONE -->
+                <button class="bottone-nav">
+                    <i class="fa-solid fa-user-plus icona-grande"></i>
+                    <div class="testo-bottone">Invite</div>
+                </button>
+                <!-- FINE BOTTONE -->
+
+                <!-- BOTTONE -->
+                <button class="bottone-nav">
+                    <i class="fa-solid fa-user-group icona-grande"></i>
+                    <div class="testo-bottone">Manage Partecipants</div>
+                </button>
+                <!-- FINE BOTTONE -->
+
+                <!-- BOTTONE -->
+                <button class="bottone-nav">
+                    <i class="fa-regular fa-chart-bar icona-grande"></i>
+                    <div class="testo-bottone">Poling</div>
+                </button>
+                <!-- FINE BOTTONE -->
+
+                <!-- BOTTONE -->
+                <button class="bottone-nav">
+                    <i class="fa-solid fa-share-from-square icona-grande icona-verde"></i>
+                    <div class="testo-bottone">Share Screen</div>
+                    <span class="freccia"><i class="fa-solid fa-angle-up"></i></span>
+                </button>
+                <!-- FINE BOTTONE -->
+
+                <!-- BOTTONE -->
+                <button class="bottone-nav">
+                    <i class="fa-solid fa-comment icona-grande"></i>
+                    <div class="testo-bottone">Chat</div>
+                </button>
+                <!-- FINE BOTTONE -->
+
+                <!-- BOTTONE -->
+                <button class="bottone-nav">
+                    <i class="fa-solid fa-record-vinyl icona-grande"></i>
+                    <div class="testo-bottone">Record</div>
+                </button>
+                <!-- FINE BOTTONE -->
+
+                <!-- BOTTONE -->
+                <button class="bottone-nav">
+                    <i class="fa-solid fa-table-cells-large icona-grande"></i>
+                    <div class="testo-bottone">Breakout Rooms</div>
+                </button>
+                <!-- FINE BOTTONE -->
+
+                <!-- BOTTONE -->
+                <button class="bottone-nav">
+                    <i class="fa-solid fa-ellipsis icona-grande"></i>
+                    <div class="testo-bottone">More</div>
+                </button>
+                <!-- FINE BOTTONE -->
+            </div>
+
+            <div class="sezione-bottoni-nav sezione-bottoni-laterale spostato-destra">
+                <button class="bottone-chiusura">
+                    End meeting
+                </button>
+                
+            </div>
+                
         </NAV>
         <!-- FINE NAV -->
 
